Add database connection configuration and models

--- a/UserCachingApi/UserCachingApi/appsettings.json
+++ b/UserCachingApi/UserCachingApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-D4FGQJS\\SQLEXPRESS;Database=PublicApiCacheDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
